--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "theme/cayman"]
-	path = themes/cayman
+[submodule "themes/cayman-hugo-theme"]
+	path = themes/cayman-hugo-theme
 	url = https://github.com/zwbetz-gh/cayman-hugo-theme.git
